--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^1.1.0",
+    "browser-sync": "^1.0.0",
     "connect": "^2.14.4",
     "connect-livereload": "^0.4.0",
-    "browser-sync": "^1.0.0",
     "del": "^0.1.0",
     "gulp": "^3.8.1",
     "gulp-autoprefixer": "^0.0.7",
@@ -14,17 +13,20 @@
     "gulp-cache": "^0.1.1",
     "gulp-clean": "^0.2.4",
     "gulp-csso": "^0.2.6",
+    "gulp-file-include": "^0.3.1",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
     "gulp-imagemin": "^0.5.0",
     "gulp-jshint": "^1.5.3",
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
+    "gulp-plumber": "^0.6.3",
     "gulp-replace": "^0.3.0",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
     "gulp-uglify": "^0.2.1",
     "gulp-useref": "^0.4.2",
+    "gulp-util": "^2.2.17",
     "jshint-stylish": "^0.2.0",
     "opn": "^0.1.1",
     "psi": "^0.0.4",
